# wzrdbook

./: ._open-next.config.ts  .gitignore  .vercelignore  API_DOCS.md  GritMusicApp.swift  INFO_PLIST_SETUP.md  NFT_MANAGEMENT.md  PhantomWalletService.swift  WALKTHROUGH.md  WalletView.swift  capacitor.config.ts  check-accounts.ts  check-curve.ts  collection_output.txt  collection_output_ankr.txt  collection_output_final.txt  collection_verified.txt  collection_verified_final.txt  discord_server_setup.md  ecosystem_db.json  mint_output.txt  next.config.ts  open-next.config.ts  package-lock.json  package.json  restock_output.txt  tsconfig.script.json  wrangler.json
app/: globals.css  layout.tsx  page.tsx
components/: AuthGate.tsx  BackToDashboard.tsx  ClaimNFT.tsx  CursorController.tsx  DiscordComms.tsx  DiscordConnect.tsx  DiscordVerification.tsx  FullMusicPlayer.tsx  GlassGate.tsx  GritStateProvider.tsx  ManifoldComputer.tsx  MusicPlayer.tsx  MusicTrackRow.tsx  Navigation.tsx  PrivateKeyLogin.tsx  TrackCard.tsx  (+2 more)
grit-programs/: Anchor.toml  Cargo.toml  deploy_devnet.sh  grit_bonding.json  grit_gov.json  grit_staking.json
grit-programs/programs/grit-bonding/: Cargo.toml
grit-programs/programs/grit-bonding/src/: lib.rs
grit-programs/programs/grit-gov/: Cargo.toml
grit-programs/programs/grit-gov/src/: lib.rs
grit-programs/programs/grit-staking/: Cargo.toml
grit-programs/programs/grit-staking/src/: lib.rs
grit-programs/programs/grit-treasury/: Cargo.toml
grit-programs/programs/grit-treasury/src/: lib.rs
grit-programs/tests/: treasury_constraints.ts
(+267 files in other folders)
