[workspace]
resolver = "2"
members = [
    "programs/grit-bonding",
    "programs/grit-staking",
    "programs/grit-gov",
    "programs/grit-treasury"
]

[workspace.dependencies]
borsh = "=1.3.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
